--- a/030-libcellbackend/node/package.json
+++ b/030-libcellbackend/node/package.json
@@ -39,17 +39,19 @@
     "node": "^12.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.10",
+    "@malkab/ts-utils": "^4.1.5",
+    "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
-    "@types/node": "^14.6.0",
+    "@types/node": "^14.14.2",
+    "@types/webpack-env": "^1.15.3",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "mocha": "^7.2.0",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
-    "terser": "^5.2.1",
+    "terser": "^5.3.8",
     "terser-webpack-plugin": "^4.1.0",
-    "ts-loader": "^8.0.3",
+    "ts-loader": "^8.0.6",
     "tslint": "^6.1.3",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.2",
@@ -59,8 +61,8 @@
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
-    "@malkab/node-utils": "^1.2.1",
-    "@malkab/rxpg": "^4.1.1",
+    "@malkab/node-utils": "^1.5.15",
+    "@malkab/rxpg": "^4.1.2",
     "libcell": "file:./node-pack/libcell-v1.0.1.tgz"
   }
 }
