--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Added by mlkcontext
 # -------------------
+010-cell-db/src/050-add_metadata.sql
 assets/redis_config/redis.conf
 assets/postgres_config/postgresql.conf
 # -------------------
