--- a/030-libcellbackend/node/package.json
+++ b/030-libcellbackend/node/package.json
@@ -41,17 +41,19 @@
   "devDependencies": {
     "@malkab/ts-utils": "^4.1.5",
     "@types/chai": "^4.2.14",
+    "@types/lodash": "^4.14.162",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.14.2",
     "@types/webpack-env": "^1.15.3",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
+    "lodash": "^4.17.20",
     "mocha": "^7.2.0",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "terser": "^5.3.8",
     "terser-webpack-plugin": "^4.1.0",
-    "ts-loader": "^8.0.6",
+    "ts-loader": "^8.0.7",
     "tslint": "^6.1.3",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.2",
@@ -62,7 +64,7 @@
   },
   "dependencies": {
     "@malkab/node-utils": "^1.5.15",
-    "@malkab/rxpg": "^4.1.2",
-    "libcell": "file:./node-pack/libcell-v1.0.1.tgz"
+    "@malkab/rxpg": "^4.1.4",
+    "libcell": "file:./node-pack/libcell-v1.0.9.tgz"
   }
 }
