--- a/tmuxinator/cell-db.yml
+++ b/tmuxinator/cell-db.yml
@@ -3,14 +3,16 @@ root: /home/git/malkab-phd/cell
 
 windows:
 
-  - psql-cell: >
+  - cell-db/psql-cell: >
       clear ;
       sleep 2 ;
-      cd docker/010-dev ;
-      . mlkcontext common
+      cd 010-cell-db/docker ;
+      . mlkcontext common ;
+      ./110-pg-psql.sh
 
   - compose: >
       clear ;
       sleep 0.2 ;
-      cd docker/010-dev ;
-      . mlkcontext common
+      cd 010-cell-db/docker ;
+      . mlkcontext common ;
+      ./010-compose_up.sh
