--- a/tmuxinator/cell-libcell.yml
+++ b/tmuxinator/cell-libcell.yml
@@ -3,8 +3,9 @@ root: /home/git/malkab-phd/cell
 
 windows:
 
-  - node: >
+  - libcell/node: >
       clear ;
       sleep 0.2 ;
       cd 020-libcell/docker ;
-      . mlkcontext common
+      . mlkcontext common ;
+      ./010-docker_node_run.sh
