--- a/020-libcell/node/package.json
+++ b/020-libcell/node/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "libcell",
-  "version": "1.0.43",
+  "name": "@malkab/libcell",
+  "version": "1.0.53",
   "description": "Cell main library for both back and frontend.",
   "scope": "@malkab",
   "author": {
@@ -22,16 +22,17 @@
   },
   "private": false,
   "scripts": {
+    "package-json-version": "echo 2020-10-22",
     "clean": "rm -Rf build ; rm -Rf dist",
     "quick-test": "npm-run-all --parallel service:watch:quick-test:server service:build",
     "start": "npm-run-all --parallel service:watch:mocha:server service:build",
-    "build-with-docs": "npm run clean ; npm run service:build-lib ; npm run build-docs ; rm -Rf docs ; cp -R typedoc/build/html docs",
-    "build": "npm run clean ; npm run service:build-lib",
+    "build": "yarn clean ; yarn service:build-lib",
+    "build-with-docs": "yarn clean ; yarn service:build-lib ; yarn build-docs ; rm -Rf docs ; cp -R typedoc/build/html docs",
     "build-docs": "cd typedoc ; ./html ; cd ..",
-    "distribute-pack": "./node-pack/distribute-pack.sh",
-    "install-distributed-pack": "./node-pack/install-packages.sh",
-    "service:build-lib": "webpack --config webpack-production.config.js --progress --colors",
-    "service:build": "webpack --progress --colors",
+    "publish-dev": "yarn build ; yarn publish --patch --no-git-tag-version",
+    "publish-production": "yarn build-with-docs ; yarn publish --no-git-tag-version",
+    "service:build-lib": "webpack --config webpack-production.config.js --progress",
+    "service:build": "webpack --progress --watch",
     "service:watch:quick-test:server": "nodemon --inspect=0.0.0.0:9329 \"./build/quicktest.js\" --watch \"./build/quicktest.js\"",
     "service:watch:mocha:server": "nodemon --ext js --watch ./build/ --exec 'mocha --timeout 20000 ./build/mocha.js || true'"
   },
@@ -40,28 +41,30 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.0.4",
-    "@types/node": "^14.14.7",
+    "@types/mocha": "^7.0.0",
+    "@types/node": "^14.14.10",
     "@types/proj4": "^2.5.0",
+    "@types/webpack-env": "^1.15.3",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "mocha": "^7.2.0",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
-    "terser": "^5.4.0",
-    "terser-webpack-plugin": "^4.1.0",
-    "ts-loader": "^8.0.7",
+    "terser": "^5.5.1",
+    "terser-webpack-plugin": "^4.2.3",
+    "ts-loader": "^8.0.11",
+    "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "typedoc": "^0.19.2",
-    "typescript": "^4.0.2",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
+    "typescript": "^4.1.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.2.0",
     "webpack-filter-warnings-plugin": "^1.2.1",
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
     "@turf/helpers": "^6.1.4",
     "@turf/turf": "^5.1.6",
-    "proj4": "^2.6.2"
+    "proj4": "^2.6.3"
   }
 }
