--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # Added by mlkcontext
 # -------------------
-assets/postgres_config/postgresql.conf
-assets/redis_config/redis.conf
 010-cell-db/src/050-add_metadata.sql
+070-cellutilities/docker/020_production_image/Dockerfile
+070-cellutilities/docker/030_swarms/010-single_machine/910-volumes_drop.sh
+070-cellutilities/docker/030_swarms/010-single_machine/005_docker_gitlab_images_pull.sh
+070-cellutilities/docker/030_swarms/010-single_machine/docker-compose.yaml
+070-cellutilities/docker/030_swarms/010-single_machine/INSTANCE
+070-cellutilities/docker/030_swarms/010-single_machine/900-docker-swarm-stack-rm.sh
+070-cellutilities/docker/030_swarms/010-single_machine/010-docker-swarm-stack-deploy.sh
+assets/redis_config/redis.conf
+assets/postgres_config/postgresql.conf
 # -------------------
