--- a/070-cellutilities/node/package.json
+++ b/070-cellutilities/node/package.json
@@ -25,7 +25,6 @@
     "package-json-version": "echo 2020-10-22",
     "clean": "rm -Rf build ; rm -Rf dist",
     "quick-test": "npm-run-all --parallel service:watch:quick-test:server service:build",
-    "start": "npm-run-all --parallel service:watch:main:server service:build",
     "build": "yarn clean ; yarn service:build-main",
     "build-with-docs": "yarn clean ; yarn service:build-main ; yarn build-docs ; rm -Rf docs ; cp -R typedoc/build/html docs",
     "mocha": "npm-run-all --parallel service:watch:mocha:server service:build",
@@ -35,8 +34,7 @@
     "service:build-main": "webpack --config webpack-production.config.js --progress",
     "service:build": "webpack --progress --watch",
     "service:watch:quick-test:server": "nodemon --inspect=0.0.0.0:9329 \"./build/quicktest.js\" --watch \"./build/quicktest.js\"",
-    "service:watch:mocha:server": "nodemon --ext js --watch ./build/mocha.js --exec 'mocha --timeout 20000 ./build/mocha.js || true'",
-    "service:watch:main:server": "nodemon --inspect=0.0.0.0:9229 ./build/main.js --watch ./build/"
+    "service:watch:mocha:server": "nodemon --ext js --watch ./build/mocha.js --exec 'mocha --timeout 20000 ./build/mocha.js || true'"
   },
   "engines": {
     "node": "^12.0.0"
@@ -49,12 +47,12 @@
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "mocha": "^7.2.0",
-    "ts-node": "^9.0.0",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "terser": "^5.3.7",
     "terser-webpack-plugin": "^4.2.3",
     "ts-loader": "^8.0.6",
+    "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.2",
@@ -63,5 +61,9 @@
     "webpack-filter-warnings-plugin": "^1.2.1",
     "webpack-node-externals": "^2.5.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@malkab/libcellbackend": "^1.0.2",
+    "@malkab/node-utils": "^1.5.19",
+    "@malkab/rxpg": "^4.1.23"
+  }
 }
