--- a/tmuxinator/cell-utilities.yml
+++ b/tmuxinator/cell-utilities.yml
@@ -5,4 +5,6 @@ windows:
   - node: >
       clear ;
       sleep 0.5 ;
-      cd 070-cellutilities/docker/010_dev
+      cd 070-cellutilities/docker/010_dev ;
+      . mlkcontext common ;
+      ./010_node.sh
