--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # Added by mlkcontext
 # -------------------
-assets/postgres_config/postgresql.conf
-assets/redis_config/redis.conf
+010-cell-db/src/010-create_db.sql
+010-cell-db/src/020-celldslib.sql
 010-cell-db/src/050-add_metadata.sql
 070-cellutilities/assets/coveringcells-config-discretepolyareasummary.json
-070-cellutilities/assets/griddersetup-config-discretepolyareasummary.json
-070-cellutilities/assets/gridder-config-discretepolyareasummary.json
 070-cellutilities/assets/coveringcells-config-discretepolytoparea.json
-070-cellutilities/assets/griddersetup-config-discretepolytoparea.json
+070-cellutilities/assets/gridder-config-discretepolyareasummary.json
 070-cellutilities/assets/gridder-config-discretepolytoparea.json
-# -------------------
+070-cellutilities/assets/griddersetup-config-discretepolyareasummary.json
+070-cellutilities/assets/griddersetup-config-discretepolytoparea.json
+assets/postgres_config/postgresql.conf
+assets/redis_config/redis.conf
