feat(small changes that should have been made in another branch)

--- a/tmuxinator/cell-db.yml
+++ b/tmuxinator/cell-db.yml
@@ -10,7 +10,7 @@ windows:
       . mlkcontext common ;
       ./010-compose_up.sh
 
-  - psql-celldb: >
+  - psql: >
       clear ;
       sleep 2 ;
       cd docker/010-dev
