--- a/tmuxinator/cell-gridding_scripts.yml
+++ b/tmuxinator/cell-gridding_scripts.yml
@@ -2,7 +2,12 @@ name: cell-gridding_scripts
 root: /home/git/malkab-phd/cell
 
 windows:
-  - scripts: >
+  - dropbox-scripts: >
       clear ;
       sleep 0.2 ;
-      cd 080-gridding_scripts
+      cd /home/malkab/Dropbox/tags/00-current/phd/050-workpackages/scientific/2020-12-18-gridding_scripts
+
+  - psql: >
+      clear ;
+      sleep 0.2 ;
+      cd docker/010-dev
