--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Added by mlkcontext
+# Added by mlkcontext - v1.0.1
 # -------------------
 010-cell-db/src/010-create_db.sql
 010-cell-db/src/020-celldslib.sql
