--- a/tmuxinator/cell-db.yml
+++ b/tmuxinator/cell-db.yml
@@ -10,7 +10,7 @@ windows:
   - compose: >
       clear ;
       sleep 0.2 ;
-      cd 010-cell-db/docker ;
+      cd 010-celldb/docker ;
       . mlkcontext common ;
       ./010-compose_up.sh ;
       sleep 60 ;
