--- a/tmuxinator/cell-utilities.yml
+++ b/tmuxinator/cell-utilities.yml
@@ -10,9 +10,9 @@ windows:
       clear ;
       cd docker/010-dev
 
-  - cell-db-compose: >
+  - celldb-compose: >
       clear ;
       sleep 0.2 ;
-      cd 010-cell-db/docker ;
+      cd 010-celldb/docker ;
       . mlkcontext common ;
       ./010-compose_up.sh
