--- a/tmuxinator/cell-db.yml
+++ b/tmuxinator/cell-db.yml
@@ -11,7 +11,7 @@ windows:
       clear ;
       sleep 0.2 ;
       cd 010-celldb/docker ;
-      . mlkcontext common ;
+      . mlkctxt common ;
       ./010-compose_up.sh ;
       sleep 60 ;
       exit
