--- a/tmuxinator/cell.yml
+++ b/tmuxinator/cell.yml
@@ -6,53 +6,15 @@ startup_window: cell/full_backend
 # This shows a custom layout obtained with PREFIX : list-windows after configuring it with PREFIX : resize-pane
 # Predefined layouts are: even-horizontal, even-vertical, main-horizontal, main-vertical, and tiled.
 windows:
-  - full_backend:
-      layout: 935c,317x73,0,0{210x73,0,0[210x36,0,0,0,210x36,0,37,4],106x73,211,0[106x18,211,0,1,106x17,211,19,5,106x18,211,37,2,106x17,211,56,3]}
-      panes:
-        - api: >
-            clear ;
-            sleep 2 ;
-            . mlkcontext common
-        - controller: >
-            clear ;
-            sleep 4 ;
-            . mlkcontext common
-        - worker_0: >
-            clear ;
-            sleep 6 ;
-            . mlkcontext common
-        - worker_1: >
-            clear ;
-            sleep 8 ;
-            . mlkcontext common
-        - worker_2: >
-            clear ;
-            sleep 10 ;
-            . mlkcontext common
-        - worker_3: >
-            clear ;
-            sleep 12 ;
-            . mlkcontext common
   - celldb-psql: >
       clear ;
-      sleep 14 ;
-      . mlkcontext common ;
-      cd docker/010-dev ;
-      ./102-pg-psql-celldb-master.sh
+      cd docker/010-dev
   - cell-raw-data-psql: >
       clear ;
-      sleep 16 ;
-      . mlkcontext common ;
-      cd docker/010-dev ;
-      ./109-pg-psql-cell_raw_data-master.sh
+      cd docker/010-dev
   - cell-persistence: >
       clear ;
-      sleep 0.2 ;
-      . mlkcontext common ;
-      cd 010-celldb/docker ;
-      ./010-compose_up.sh
+      cd 010-celldb/docker
   - docker: >
       clear ;
-      sleep 18 ;
-      . mlkcontext common ;
       cd docker/010-dev
