--- a/070-cellutilities/node/package.json
+++ b/070-cellutilities/node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RENAME-ME",
+  "name": "cell-utilities",
   "version": "1.0.0",
   "description": "REWRITE-ME",
   "scope": "SCOPE-ME",
