feat(libcellbackend migrated to Node 14 and modernized, reorganized the CLI subproject)

--- a/030-libcellbackend/node/package.json
+++ b/030-libcellbackend/node/package.json
@@ -37,41 +37,39 @@
     "service:watch:mocha:server": "nodemon --ext js --watch ./build/ --exec 'mocha --timeout 20000 ./build/mocha.js || true'"
   },
   "engines": {
-    "node": "^12.0.0"
+    "node": "^14.0.0"
   },
   "devDependencies": {
-    "@malkab/ts-utils": "^4.1.13",
+    "@malkab/ts-utils": "^5.0.0",
     "@types/chai": "^4.2.14",
     "@types/lodash": "^4.14.165",
-    "@types/mathjs": "^6.0.9",
-    "@types/mocha": "^7.0.0",
-    "@types/node": "^14.14.10",
+    "@types/mocha": "^8.0.0",
+    "@types/node": "^16.0.0",
     "@types/webpack-env": "^1.16.0",
     "chai": "^4.2.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "lodash": "^4.17.20",
-    "mocha": "^7.2.0",
+    "mocha": "^9.0.0",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "terser": "^5.5.1",
-    "terser-webpack-plugin": "^4.2.3",
-    "ts-loader": "^8.0.11",
-    "ts-node": "^9.0.0",
-    "tslint": "^6.1.3",
-    "typedoc": "^0.19.2",
+    "terser-webpack-plugin": "^5.0.0",
+    "ts-loader": "^9.0.0",
+    "ts-node": "^10.0.0",
+    "eslint": "^7.0.0",
+    "typedoc": "^0.21.0",
     "typescript": "^4.1.2",
-    "webpack": "^4.44.2",
+    "webpack": "^5.0.0",
     "webpack-cli": "^4.2.0",
-    "webpack-filter-warnings-plugin": "^1.2.1",
-    "webpack-node-externals": "^2.5.2"
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "@malkab/node-logger": "^1.1.4",
-    "@malkab/node-utils": "^1.5.19",
-    "@malkab/rxpg": "^4.1.23",
-    "@turf/turf": "^5.1.6",
+    "@malkab/node-logger": "^2.0.0",
+    "@malkab/node-utils": "^2.0.0",
+    "@malkab/rxpg": "^5.0.0",
+    "@turf/turf": "^6.0.0",
     "@types/proj4": "^2.5.0",
-    "mathjs": "^8.1.0",
+    "mathjs": "^9.0.0",
     "proj4": "^2.6.3",
     "simple-statistics": "^7.4.0"
   }
