--- a/070-cell-cli/node/tsconfig.json
+++ b/070-cell-cli/node/tsconfig.json
@@ -4,8 +4,8 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "target": "es2019",
-    "module": "commonjs",
+    "target": "es2020",
+    "module": "es2020",
     "declaration": true,
     "downlevelIteration": true,
     "moduleResolution": "Node",
