--- a/010-celldb/docker/docker-compose.yaml
+++ b/010-celldb/docker/docker-compose.yaml
@@ -7,7 +7,7 @@ networks:
 
 services:
   cell-db-postgis-dev:
-    image: malkab/postgis:gargantuan_giraffe
+    image: malkab/postgis:holistic_hornet
     container_name: cell-db-postgis-dev
     shm_size: '2gb'
 
@@ -22,10 +22,10 @@ services:
 
     volumes:
       - ./000-localhost-volumes/cell-db-postgis:/data
-      - ../../../assets/postgres_config/postgresql.conf:/default_confs/postgresql.conf
+      - ../../assets/postgres_config/postgresql.conf:/default_confs/postgresql.conf
 
   cell-raw-data-postgis-dev:
-    image: malkab/postgis:gargantuan_giraffe
+    image: malkab/postgis:holistic_hornet
     container_name: cell-raw-data-postgis-dev
     shm_size: '2gb'
 
@@ -40,7 +40,7 @@ services:
 
     volumes:
       - ./000-localhost-volumes/cell-raw-data-postgis:/data
-      - ../../../assets/postgres_config/postgresql.conf:/default_confs/postgresql.conf
+      - ../../assets/postgres_config/postgresql.conf:/default_confs/postgresql.conf
 
   cell-redis-dev:
     image: redis:5.0
@@ -55,7 +55,7 @@ services:
 
     volumes:
       - ./000-localhost-volumes/cell-redis:/data
-      - ../../../assets/redis_config/redis.conf:/redis.conf:ro
+      - ../../assets/redis_config/redis.conf:/redis.conf:ro
 
     entrypoint:
       - redis-server
