--- a/030-libcellbackend/node/tsconfig.json
+++ b/030-libcellbackend/node/tsconfig.json
@@ -26,6 +26,10 @@
       "node_modules/@types",
       "src/@types"
     ],
+    "types": [
+      "webpack-env",
+      "node"
+    ],
     "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"]
   },
   "include": [ "src" ],
