feat(starting with the CLI tool)

--- a/070-cell-cli/node/.npmignore
+++ b/070-cell-cli/node/.npmignore
@@ -1,15 +1,14 @@
-node_modules
-build
-src
-typedoc
-test
 .editorconfig
 .jshintrc
-README-package-json.md
+*.tgz
+*.tar
+build
+node_modules
+test
 tsconfig.json
 tslint.json
+typedoc
 webpack*
-*.tgz
-scripts
-README_boilerplate.md
 yarn-error.log
+scripts
+assets
