--- a/070-cell-cli/node/package.json
+++ b/070-cell-cli/node/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "cell-cli",
+  "name": "RENAME-ME",
   "version": "0.0.1",
-  "description": "A CLI interface to a Cell instance",
-  "scope": "malkab",
+  "description": "REWRITE-ME",
+  "scope": "SCOPE-ME",
   "author": {
-    "name": "Juan Pedro Pérez Alcántara",
-    "email": "jp.perez.alcantara@gmail.com",
+    "name": "MY-NAME",
+    "email": "MY-EMAIL@EMAIL.COM",
     "url": "HTTP://MY-URL"
   },
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "keywords": [
-    "cell",
-    "cli"
+    "PUT-NEW-KEYWORDS-HERE",
+    "ANOTHER-ONE-HERE"
   ],
   "license": "UNLICENSED",
   "homepage": "https://github.com/owner/project#readme",
@@ -22,7 +22,7 @@
   },
   "private": false,
   "scripts": {
-    "package-json-version": "echo 2020-10-22",
+    "package-json-version": "echo 2021-09-08",
     "clean": "rm -Rf build ; rm -Rf dist",
     "quick-test": "npm-run-all --parallel service:watch:quick-test:server service:build",
     "build": "yarn clean ; yarn service:build-main",
@@ -30,45 +30,38 @@
     "build-with-docs": "yarn clean ; yarn service:build-main ; yarn build-docs ; rm -Rf docs ; cp -R typedoc/build/html docs",
     "mocha": "npm-run-all --parallel service:watch:mocha:server service:build",
     "build-docs": "cd typedoc ; ./html ; cd ..",
-    "publish-tar": "yarn build ; yarn pack --filename filename.tar",
-    "publish-dev": "yarn build ; yarn publish --patch --no-git-tag-version",
-    "publish-production": "yarn build-with-docs ; yarn publish --no-git-tag-version",
     "service:build-main": "webpack --config webpack-production.config.js --progress",
     "service:build": "webpack --progress --watch",
-    "service:watch:quick-test:server": "nodemon --inspect=0.0.0.0:9329 \"./build/quicktest.js\" --watch \"./build/quicktest.js\"",
-    "service:watch:mocha:server": "nodemon --ext js --watch ./build/mocha.js --exec 'mocha --max-old-space-size=4096 --timeout 20000 ./build/mocha.js || true'",
-    "service:watch:main:server": "nodemon --inspect=0.0.0.0:9229 ./build/main.js --watch ./build/"
+    "service:watch:quick-test:server": "nodemon --delay 0 --inspect=0.0.0.0:9329 \"./build/quicktest.js\" --watch \"./build/quicktest.js\"",
+    "service:watch:main:server": "nodemon --delay 0 --inspect=0.0.0.0:9229 ./build/main.js --watch ./build/",
+    "service:watch:mocha:server": "nodemon --delay 0 --ext js --watch ./build/mocha.js --exec 'mocha --max-old-space-size=4096 --timeout 20000 ./build/mocha.js || true'"
   },
   "engines": {
     "node": "^14.0.0"
   },
   "devDependencies": {
-    "@malkab/ts-utils": "^4.1.13",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^14.14.0",
-    "@types/webpack-env": "^1.15.3",
-    "chai": "^4.2.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "mocha": "^7.2.0",
-    "ts-node": "^9.0.0",
-    "nodemon": "^2.0.6",
-    "npm-run-all": "^4.1.5",
-    "terser": "^5.3.7",
-    "terser-webpack-plugin": "^4.2.3",
-    "ts-loader": "^8.0.6",
-    "tslint": "^6.1.3",
-    "typedoc": "^0.19.2",
-    "typescript": "^4.0.2",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^4.1.0",
-    "webpack-filter-warnings-plugin": "^1.2.1",
-    "webpack-node-externals": "^2.5.2"
+    "@types/chai": "^4.0.0",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.0.0",
+    "@types/webpack-env": "^1.0.0",
+    "chai": "^4.0.0",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "eslint": "^7.0.0",
+    "mocha": "^9.0.0",
+    "nodemon": "^2.0.0",
+    "npm-run-all": "^4.1.0",
+    "terser": "^5.5.0",
+    "terser-webpack-plugin": "^5.0.0",
+    "ts-loader": "^9.0.0",
+    "ts-node": "^10.0.0",
+    "tslib": "^2.3.0",
+    "typedoc": "^0.21.0",
+    "typescript": "^4.1.0",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "@malkab/libcellbackend": "^1.0.2",
-    "@malkab/node-logger": "^1.1.4",
-    "@malkab/node-utils": "^1.5.19",
-    "@malkab/rxpg": "^4.1.23"
+    "meow": "^10.1.1"
   }
 }
