--- a/070-cell-cli/node/tsconfig.json
+++ b/070-cell-cli/node/tsconfig.json
@@ -23,9 +23,9 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "typeRoots": [
-      "node_modules/@types",
-      "src/@types"
+      "node_modules/@types"
     ],
+    "types": [ "node", "webpack" ],
     "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"]
   },
   "include": [ "src" ],
